# ImageLab

./: CMakeLists.txt  README.md
gui/: CMakeLists.txt  about.cpp  about.h  aboutdialog.cpp  aboutdialog.h  aboutpane.cpp  gallerypane.cpp  gallerypane.h  gui.cpp  gui.h  imagecanvas.cpp  imagecanvas.h  mainapp.cpp  mainframe.cpp  mainframe.h  progressbar.cpp  progressbar.h
guictrl/: CMakeLists.txt  gallery.cpp  gallery.h  guievent.cpp  guievent.h  imagecanvas.cpp  imagecanvas.h  progressbar.cpp  progressbar.h  transqueue.cpp  transqueue.h
imgproc/: CMakeLists.txt  utility.cpp  utility.h
notes/: coding-notes.md
plugins/: CMakeLists.txt
plugins/bilateral/: CMakeLists.txt  bilateral.cpp  bilateral.fbp  bilateral.h  bilateralGUI.cpp  bilateralGUI.h
plugins/canny/: CMakeLists.txt  canny.cpp  canny.fbp  canny.h  cannyguibase.cpp  cannyguibase.h
plugins/graylize/: CMakeLists.txt  graylize.cpp  graylize.h
plugins/greylize/: CMakeLists.txt  greylize.cpp  greylize.h  greylizepanebase.cpp  greylizepanebase.h  pluginGui.fbp
plugins/resize/: CMakeLists.txt  ResizeGUIBase.cpp  ResizeGUIBase.h  resize.cpp  resize.fbp  resize.h
plugmgr/: CMakeLists.txt  plugin.cpp  plugin.h  plugmgr.cpp  plugmgr.h
res/: AboutPane.fbp  aboutpane.xrc
resource/: gui.fbp
utils/: CMakeLists.txt  cvbridge.cpp  cvbridge.h  gallery.cpp  gallery.h  imagecanvas.cpp  imagecanvas.h  progressbar.cpp  progressbar.h  transqueue.h  wx_pch.h
