SET(EXE_NAME "pixelab")
AUX_SOURCE_DIRECTORY(. SRC_LIST)

INCLUDE(${wxWidgets_USE_FILE})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS} ../utils ../imgproc)
ADD_EXECUTABLE(${EXE_NAME} ${SRC_LIST})
TARGET_LINK_LIBRARIES(${EXE_NAME} ${wxWidgets_LIBRARIES} ${OpenCV_LIBS} imgproc utils)
SET_PROPERTY(TARGET ${EXE_NAME} PROPERTY CXX_STANDARD 11)
#IF(WIN32)
#    SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES LINK_FLAGS "/SUBSYSTEM:windows")
#ENDIF(WIN32)
